package msg;

// 更新金币
message GW2C_UpdateGold {
    optional uint32 num = 1;
}

// 更新元宝
message GW2C_UpdateYuanbao {
    optional uint32 num = 1;
}

// 更新点卷
message GW2C_UpdateCoupon {
    optional uint32 num = 1;
}

//新的gold
message C2GW_UploadTrueGold {
    optional uint64 num = 1;
}
message GW2C_UpdateTrueGold {
    optional uint64 num = 1;
}
