package msg;
import "serialize.proto";

// 添加收货地址
message C2GW_AddDeliveryAddress {
    optional msg.UserAddress info = 1;
}

// 删除地址
message C2GW_DelDeliveryAddress {
    optional uint32 index = 1;
}

// 修改地址
message C2GW_ChangeDeliveryAddress {
    optional uint32 index = 1;
    optional msg.UserAddress info = 2;
}

// 同步地址列表
message GW2C_SendDeliveryAddressList {
    repeated msg.UserAddress list = 1;
}

// 请求充值页面
message C2GW_ReqRechargeMoney {
    optional uint32 amount = 1;
    optional string token = 2;
    optional uint32 type = 3;
}

// 返回充值请求
message GW2C_RetRechargeMoney {
    optional string urlcheckout = 1;
}

// 红包平台充值完成通知
message C2GW_PlatformRechargeDone {
    optional uint64 userid = 1;
}

// 同步玩家绑定微信信息
message GW2C_SendWechatInfo {
    optional string openid = 1;
}

// 抽奖
message C2GW_StartLuckyDraw {
    optional uint64 userid = 1;
}

message GW2C_LuckyDrawHit {
    optional int32 id = 1;
}

// 免费赠送金币
message GW2C_FreePresentNotify {
    optional int32 money = 1;
}

// 发送任务列表
message GW2C_SendTaskList {
    repeated msg.TaskData tasks = 1;
}

// 领取奖励
message C2GW_GetTaskReward {
    optional int32 taskid = 1;
}

// 抽奖历史记录
message GW2C_SendLuckyDrawRecord {
    optional LuckyDrawRecord luckydraw = 1;
}

// 请求任务列表
message C2GW_ReqTaskList {
	
}

// 排行榜数据
message SortInfo {
    optional int64  uid     = 1;    //userid
    optional string name    = 2;    //玩家名字
    optional string face    = 3;    //玩家头像
    optional int32  score   = 4;    //玩家比分
    optional int32  rank    = 5;    //排名
}


// 请求排行榜
message C2GW_ReqSort {
    optional int32 type     = 1;    //类型 见define.proto sorttype枚举
    optional int32 start    = 2;    //起始
    optional int32 end      = 3;    //结束
}

// 返回排行榜
message GW2C_RetSort {
    optional int32 type     = 1;
    repeated SortInfo list  = 2;     //信息列表
    optional int32 myrank   = 3;
    optional int32 myscore  = 4;
}

// 请求提现
message C2GW_ReqGetCash {
}

// 返回现金
message C2GW_RetGetCash {
    optional int32 num = 1;         //单位分
}

// 更新用户信息
message C2GW_UpdateUserInfo {
    optional string name = 1;
    optional string face = 2;
}

// 分享成功
message C2GW_ShareOk {
}

// 奖励信息
message CmnRewardInfo {
    optional int32 itemid = 1;
    optional int32 num = 2;
}

message GW2C_CmnRewardInfo {
    repeated CmnRewardInfo list = 1;
}

// 
message GW2C_ShareTime {
    optional int32 nexttime = 1;
}

